erro.txt
In file included from brooks.c:2:
brooks.h:13:1: warning: no semicolon at end of struct or union
   13 | } Livro;
      | ^
brooks.c:6:1: error: unknown type name ‘Livros’; did you mean ‘Livro’?
    6 | Livros *criaAcervo()
      | ^~~~~~
      | Livro
brooks.c:6:9: error: conflicting types for ‘criaAcervo’; have ‘int *()’
    6 | Livros *criaAcervo()
      |         ^~~~~~~~~~
brooks.h:33:8: note: previous declaration of ‘criaAcervo’ with type ‘Livro *()’
   33 | Livro *criaAcervo();
      |        ^~~~~~~~~~
brooks.c:10:1: error: unknown type name ‘Livros’; did you mean ‘Livro’?
   10 | Livros *cadNovoLivro(Filiais *f, char isbn, char autor,int qtdLivros )
      | ^~~~~~
      | Livro
brooks.c:10:9: error: conflicting types for ‘cadNovoLivro’; have ‘int *(Filiais *, char,  char,  int)’
   10 | Livros *cadNovoLivro(Filiais *f, char isbn, char autor,int qtdLivros )
      |         ^~~~~~~~~~~~
brooks.h:34:8: note: previous declaration of ‘cadNovoLivro’ with type ‘Livro *(Filiais *, char,  char,  int)’
   34 | Livro *cadNovoLivro(Filiais *f, char isbn, char autor,int qtdLivro );
      |        ^~~~~~~~~~~~
brooks.c:16:1: error: unknown type name ‘Livros’; did you mean ‘Livro’?
   16 | Livros *removeLivros(Filiais *f,int id, char isbn);
      | ^~~~~~
      | Livro
brooks.c:17:1: error: expected identifier or ‘(’ before ‘{’ token
   17 | {
      | ^
brooks.c:23:1: error: expected identifier or ‘(’ before ‘{’ token
   23 | {
      | ^
brooks.c:35:1: error: expected identifier or ‘(’ before ‘{’ token
   35 | {
      | ^
brooks.c:41:1: error: expected identifier or ‘(’ before ‘{’ token
   41 | {
      | ^
